# Blog-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  env-example  pyproject.toml  pytest.ini
app/: db.sqlite3  gunicorn.conf.py  package-lock.json  package.json  tailwind.config.js
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/app/settings/: settings.py  settings_markdown.py  settings_storages.py
app/blog/: admin.py  feeds.py  models.py  tests.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_post_image.py  0006_enable_trigram_extension.py
app/blog/static/js/: theme.js
app/blog/templates/: pagination.html
app/blog/templates/blog/: base.html
app/blog/templates/blog/post/: comment.html  detail.html  latest_posts.html  list.html  search.html  share.html
app/blog/templates/blog/post/includes/: comment_form.html
app/blog/templatetags/: blog_tags.py
frontend/: tailwind.config.js  test.html
