[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-storages[s3]>=1.14.6",
    "django-taggit>=6.1.0",
    "gunicorn>=25.1.0",
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.2",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]
